@@ -36,7 +36,6 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 import org.apache.tuweni.bytes.Bytes32;
 import org.hyperledger.besu.metrics.ObservableMetricsSystem;
 import org.hyperledger.besu.metrics.Observation;
@@ -106,8 +105,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
   private UInt64 currentSlot = historicalTolerance.times(2);
   private final List<Bytes32> requiredBlockRootEvents = new ArrayList<>();
   private final List<Bytes32> requiredBlockRootDroppedEvents = new ArrayList<>();
-  private final List<BlobIdentifier> requiredBlobSidecarEvents = new ArrayList<>();
-  private final List<BlobIdentifier> requiredBlobSidecarDroppedEvents = new ArrayList<>();
+  private final List<BlobIdentifier> requiredBlobSidecarsEvents = new ArrayList<>();
+  private final List<Bytes32> requiredBlobSidecarsDroppedEvents = new ArrayList<>();
   private final List<BlobSidecar> newBlobSidecarEvents = new ArrayList<>();
 
   private Optional<Function<SlotAndBlockRoot, BlockBlobSidecarsTracker>> mockedTrackersFactory =
@@ -119,9 +118,10 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     blockBlobSidecarsTrackersPool.subscribeRequiredBlockRoot(requiredBlockRootEvents::add);
     blockBlobSidecarsTrackersPool.subscribeRequiredBlockRootDropped(
         requiredBlockRootDroppedEvents::add);
-    blockBlobSidecarsTrackersPool.subscribeRequiredBlobSidecar(requiredBlobSidecarEvents::add);
-    blockBlobSidecarsTrackersPool.subscribeRequiredBlobSidecarDropped(
-        requiredBlobSidecarDroppedEvents::add);
+    blockBlobSidecarsTrackersPool.subscribeRequiredBlobSidecars(
+        (blockRoot, blobIdentifiers) -> requiredBlobSidecarsEvents.addAll(blobIdentifiers));
+    blockBlobSidecarsTrackersPool.subscribeRequiredBlobSidecarsDropped(
+        requiredBlobSidecarsDroppedEvents::add);
     blockBlobSidecarsTrackersPool.subscribeNewBlobSidecar(newBlobSidecarEvents::add);
     when(blobSidecarPublisher.apply(any())).thenReturn(SafeFuture.COMPLETE);
     setSlot(currentSlot);
@@ -147,8 +147,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.getBlock(block.getRoot())).contains(block);
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
     assertBlobSidecarsTrackersCount(1);
@@ -174,8 +174,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         .contains(blobSidecar);
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactly(blobSidecar);
 
     assertBlobSidecarsCount(1);
@@ -199,8 +199,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         .isTrue();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactly(blobSidecar);
 
     assertBlobSidecarsCount(1);
@@ -288,8 +288,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.containsBlock(block.getRoot())).isFalse();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
     assertBlobSidecarsTrackersCount(0);
@@ -314,8 +314,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.containsBlock(block.getRoot())).isFalse();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
@@ -350,7 +350,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
   @Test
   public void onNewBlobSidecarOnNewBlock_addTrackerWithBothBlockAndBlobSidecar() {
     final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
-    final BlobSidecar blobSidecar = dataStructureUtil.randomBlobSidecarsForBlock(block).get(0);
+    final BlobSidecar blobSidecar = dataStructureUtil.randomBlobSidecarsForBlock(block).getFirst();
 
     blockBlobSidecarsTrackersPool.onNewBlobSidecar(blobSidecar, RemoteOrigin.GOSSIP);
     blockBlobSidecarsTrackersPool.onNewBlock(block, Optional.empty());
@@ -362,7 +362,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.containsBlock(block.getRoot())).isTrue();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactly(blobSidecar);
 
     assertBlobSidecarsCount(1);
@@ -408,8 +408,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         .isTrue();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactly(blobSidecar0, blobSidecar1);
 
     assertBlobSidecarsCount(2);
@@ -431,8 +431,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.containsBlock(block.getRoot())).isTrue();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
@@ -453,8 +453,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactlyElementsOf(blobSidecars);
 
     final BlockBlobSidecarsTracker blockBlobSidecarsTracker =
@@ -483,8 +483,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
     assertThat(newBlobSidecarEvents).containsExactlyElementsOf(blobSidecars);
 
     final BlockBlobSidecarsTracker blockBlobSidecarsTracker =
@@ -528,8 +528,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     assertThat(blockBlobSidecarsTrackersPool.containsBlock(block.getRoot())).isFalse();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
     assertBlobSidecarsTrackersCount(0);
@@ -552,8 +552,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         .isFalse();
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
 
     assertBlobSidecarsCount(0);
     assertBlobSidecarsTrackersCount(0);
@@ -651,10 +651,10 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
                         .build())
             .toList();
 
-    final Set<BlobIdentifier> missingBlobIdentifiers =
+    final List<BlobIdentifier> missingBlobIdentifiers =
         UInt64.range(UInt64.ONE, UInt64.valueOf(4))
             .map(index -> new BlobIdentifier(block.getRoot(), index))
-            .collect(Collectors.toSet());
+            .toList();
 
     final List<VersionedHash> versionedHashes =
         IntStream.range(1, 4)
@@ -670,8 +670,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               when(tracker.add(any())).thenReturn(true);
-              when(tracker.getMissingBlobSidecars())
-                  .thenAnswer(__ -> missingBlobIdentifiers.stream());
+              when(tracker.getMissingBlobSidecars()).thenAnswer(__ -> missingBlobIdentifiers);
               when(tracker.getBlock()).thenReturn(Optional.of(block));
               return tracker;
             });
@@ -690,8 +689,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     // no RPC requests, local el query is in flight
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
 
     // local el fetch triggered
     verify(tracker).setLocalElFetchTriggered();
@@ -725,8 +724,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
   void shouldFetchMissingBlobSidecarsViaRPCAfterLocalEL() {
     final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs =
+        List.of(
             new BlobIdentifier(block.getRoot(), UInt64.ONE),
             new BlobIdentifier(block.getRoot(), UInt64.ZERO));
 
@@ -734,7 +733,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getMissingBlobSidecars()).thenAnswer(__ -> missingBlobs.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs);
               when(tracker.getBlock()).thenReturn(Optional.of(block));
               return tracker;
             });
@@ -753,16 +752,16 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).containsExactlyElementsOf(missingBlobs);
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).containsExactlyElementsOf(missingBlobs);
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
   }
 
   @Test
   void shouldFetchMissingBlobSidecarsViaRPCWhenELLookupFails() {
     final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs =
+        List.of(
             new BlobIdentifier(block.getRoot(), UInt64.ONE),
             new BlobIdentifier(block.getRoot(), UInt64.ZERO));
 
@@ -770,7 +769,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getMissingBlobSidecars()).thenAnswer(__ -> missingBlobs.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs);
               when(tracker.getBlock()).thenReturn(Optional.of(block));
               return tracker;
             });
@@ -789,8 +788,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     assertThat(requiredBlockRootEvents).isEmpty();
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarEvents).containsExactlyElementsOf(missingBlobs);
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).containsExactlyElementsOf(missingBlobs);
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
   }
 
   @Test
@@ -803,14 +802,14 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
             .index(UInt64.valueOf(2))
             .build();
 
-    final Set<BlobIdentifier> missingBlobs =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs =
+        List.of(
             new BlobIdentifier(block.getRoot(), UInt64.ONE),
             new BlobIdentifier(block.getRoot(), UInt64.ZERO));
 
     final BlockBlobSidecarsTracker mockedTracker = mock(BlockBlobSidecarsTracker.class);
     when(mockedTracker.getBlock()).thenReturn(Optional.empty());
-    when(mockedTracker.getMissingBlobSidecars()).thenReturn(missingBlobs.stream());
+    when(mockedTracker.getMissingBlobSidecars()).thenReturn(missingBlobs);
     when(mockedTracker.getSlotAndBlockRoot()).thenReturn(block.getSlotAndBlockRoot());
 
     mockedTrackersFactory = Optional.of((__) -> mockedTracker);
@@ -825,87 +824,13 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     verify(mockedTracker, never()).setLocalElFetchTriggered();
 
     assertThat(requiredBlockRootEvents).containsExactly(block.getRoot());
-    assertThat(requiredBlobSidecarEvents).containsExactlyElementsOf(missingBlobs);
+    assertThat(requiredBlobSidecarsEvents).containsExactlyElementsOf(missingBlobs);
 
     assertStats("block", "rpc_fetch", 1);
     assertStats("blob_sidecar", "rpc_fetch", missingBlobs.size());
 
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
-  }
-
-  @Test
-  void shouldDropBlobSidecarsThatHasBeenFetchedButNotPresentInBlock() {
-    final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
-
-    final SlotAndBlockRoot slotAndBlockRoot = new SlotAndBlockRoot(currentSlot, block.getRoot());
-    final BlobSidecar blobSidecar =
-        dataStructureUtil
-            .createRandomBlobSidecarBuilder()
-            .signedBeaconBlockHeader(block.asHeader())
-            .index(UInt64.valueOf(2))
-            .build();
-
-    final Set<BlobIdentifier> blobsNotPresentInBlock =
-        Set.of(
-            new BlobIdentifier(slotAndBlockRoot.getBlockRoot(), UInt64.valueOf(2)),
-            new BlobIdentifier(slotAndBlockRoot.getBlockRoot(), UInt64.valueOf(3)));
-
-    mockedTrackersFactory =
-        Optional.of(
-            (slotAndRoot) -> {
-              BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getBlock()).thenReturn(Optional.empty());
-              when(tracker.getSlotAndBlockRoot()).thenReturn(slotAndBlockRoot);
-              when(tracker.setBlock(block)).thenReturn(true);
-              when(tracker.isRpcFetchTriggered()).thenReturn(true);
-              when(tracker.getUnusedBlobSidecarsForBlock())
-                  .thenReturn(blobsNotPresentInBlock.stream());
-              return tracker;
-            });
-
-    blockBlobSidecarsTrackersPool.onNewBlobSidecar(blobSidecar, RemoteOrigin.GOSSIP);
-
-    blockBlobSidecarsTrackersPool.onNewBlock(block, Optional.empty());
-
-    assertThat(requiredBlobSidecarDroppedEvents).containsExactlyElementsOf(blobsNotPresentInBlock);
-  }
-
-  @Test
-  void shouldNotDropUnusedBlobSidecarsIfFetchingHasNotOccurred() {
-    final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
-
-    final SlotAndBlockRoot slotAndBlockRoot = new SlotAndBlockRoot(currentSlot, block.getRoot());
-    final BlobSidecar blobSidecar =
-        dataStructureUtil
-            .createRandomBlobSidecarBuilder()
-            .signedBeaconBlockHeader(block.asHeader())
-            .index(UInt64.valueOf(2))
-            .build();
-
-    final Set<BlobIdentifier> blobsNotUserInBlock =
-        Set.of(
-            new BlobIdentifier(slotAndBlockRoot.getBlockRoot(), UInt64.valueOf(2)),
-            new BlobIdentifier(slotAndBlockRoot.getBlockRoot(), UInt64.valueOf(3)));
-
-    mockedTrackersFactory =
-        Optional.of(
-            (slotAndRoot) -> {
-              BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getBlock()).thenReturn(Optional.empty());
-              when(tracker.getSlotAndBlockRoot()).thenReturn(slotAndBlockRoot);
-              when(tracker.setBlock(block)).thenReturn(true);
-              when(tracker.isRpcFetchTriggered()).thenReturn(false);
-              when(tracker.getUnusedBlobSidecarsForBlock())
-                  .thenReturn(blobsNotUserInBlock.stream());
-              return tracker;
-            });
-
-    blockBlobSidecarsTrackersPool.onNewBlobSidecar(blobSidecar, RemoteOrigin.GOSSIP);
-
-    blockBlobSidecarsTrackersPool.onNewBlock(block, Optional.empty());
-
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
   }
 
   @Test
@@ -936,8 +861,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
   void shouldDropPossiblyFetchedBlobSidecars() {
     final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs =
+        List.of(
             new BlobIdentifier(block.getRoot(), UInt64.ONE),
             new BlobIdentifier(block.getRoot(), UInt64.ZERO));
 
@@ -945,7 +870,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs);
               when(tracker.getBlock()).thenReturn(Optional.of(block));
               when(tracker.getSlotAndBlockRoot()).thenReturn(block.getSlotAndBlockRoot());
               when(tracker.isRpcFetchTriggered()).thenReturn(true);
@@ -958,20 +883,20 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     blockBlobSidecarsTrackersPool.removeAllForBlock(block.getRoot());
 
-    assertThat(requiredBlobSidecarDroppedEvents).containsExactlyElementsOf(missingBlobs);
+    assertThat(requiredBlobSidecarsDroppedEvents).containsExactly(block.getRoot());
 
     // subsequent fetch will not try to fetch anything
     asyncRunner.executeQueuedActions();
 
-    assertThat(requiredBlobSidecarEvents).isEmpty();
+    assertThat(requiredBlobSidecarsEvents).isEmpty();
   }
 
   @Test
   void shouldTryToFetchFromLocalELWhenBlockArrivesAfterRPCFetch() {
     final SignedBeaconBlock block = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs =
+        List.of(
             new BlobIdentifier(block.getRoot(), UInt64.ONE),
             new BlobIdentifier(block.getRoot(), UInt64.ZERO));
 
@@ -987,7 +912,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     mockedTrackersFactory =
         Optional.of(
             (slotAndRoot) -> {
-              when(tracker.getMissingBlobSidecars()).thenAnswer(__ -> missingBlobs.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs);
               when(tracker.getBlock()).thenReturn(Optional.empty());
               when(tracker.setBlock(any())).thenReturn(true);
               when(tracker.getSlotAndBlockRoot()).thenReturn(block.getSlotAndBlockRoot());
@@ -1078,7 +1003,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
     blockBlobSidecarsTrackersPool.removeAllForBlock(signedBeaconBlock.getRoot());
 
     assertThat(requiredBlockRootDroppedEvents).isEmpty();
-    assertThat(requiredBlobSidecarDroppedEvents).isEmpty();
+    assertThat(requiredBlobSidecarsDroppedEvents).isEmpty();
   }
 
   @Test
@@ -1179,8 +1104,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
   void getAllRequiredBlobSidecars_shouldReturnAllRequiredBlobSidecars() {
     final SignedBeaconBlock block1 = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs1 =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs1 =
+        List.of(
             new BlobIdentifier(block1.getRoot(), UInt64.ONE),
             new BlobIdentifier(block1.getRoot(), UInt64.ZERO));
 
@@ -1188,7 +1113,7 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs1.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs1);
               when(tracker.getBlock()).thenReturn(Optional.of(block1));
               return tracker;
             });
@@ -1197,8 +1122,8 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
 
     final SignedBeaconBlock block2 = dataStructureUtil.randomSignedBeaconBlock(currentSlot);
 
-    final Set<BlobIdentifier> missingBlobs2 =
-        Set.of(
+    final List<BlobIdentifier> missingBlobs2 =
+        List.of(
             new BlobIdentifier(block2.getRoot(), UInt64.ONE),
             new BlobIdentifier(block2.getRoot(), UInt64.valueOf(2)));
 
@@ -1206,18 +1131,18 @@ public class BlockBlobSidecarsTrackersPoolImplTest {
         Optional.of(
             (slotAndRoot) -> {
               BlockBlobSidecarsTracker tracker = mock(BlockBlobSidecarsTracker.class);
-              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs2.stream());
+              when(tracker.getMissingBlobSidecars()).thenReturn(missingBlobs2);
               when(tracker.getBlock()).thenReturn(Optional.of(block2));
               return tracker;
             });
 
     blockBlobSidecarsTrackersPool.onNewBlock(block2, Optional.empty());
 
-    final Set<BlobIdentifier> allMissing =
-        Stream.concat(missingBlobs1.stream(), missingBlobs2.stream()).collect(Collectors.toSet());
+    final Map<Bytes32, List<BlobIdentifier>> allMissing =
+        Map.of(block1.getRoot(), missingBlobs1, block2.getRoot(), missingBlobs2);
 
     assertThat(blockBlobSidecarsTrackersPool.getAllRequiredBlobSidecars())
-        .containsExactlyElementsOf(allMissing);
+        .containsExactlyInAnyOrderEntriesOf(allMissing);
   }
 
   @Test
